...
    
    
    // UI
    internal var tableView = UITableView()
    private var loginUserImage = UIImageView()
    private var loginUsername = UILabel()
    private var noPostTextlabel = UILabel()
    private var animationView = AnimationView()
    
    private let postedCellId = "postedCellId"
    private var color = MainColor()
    private var loadDBModel = LoadDBModel()
    private var twitterLogin = TwitterLogin()
...
    }
    
    
    func changeNavRightBar() {
        
        if userWithTwitter == nil {
            navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Twitter連携", style: .plain, target: self, action: #selector(showLoginAlert))
        } else if userWithTwitter != nil {
            navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Twitter連携", style: .plain, target: self, action: #selector(showLogoutAlert))
        }
        
    }
    
...
    
    
    @objc
    func showLogoutAlert() {
        print("ログイン済ユーザー")
        let alertController = UIAlertController(title: "連携済", message: "連携解除してもよろしいですか？", preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "連携を解除", style: .default, handler: { _ in
            // ログアウト処理
            self.twitterLogin.logout()
        }))
        alertController.addAction(UIAlertAction(title: "キャンセル", style: .cancel, handler: nil))
        present(alertController, animated: true, completion: nil)
        
        alertController.view.accessibilityIdentifier = "logoutAlert"
    }
    
    
    public func setLogoutTableView() {
        tableView.removeFromSuperview()
        configureAnimation()
...
